--- a/src/containers/App/styles/core.css
+++ b/src/containers/App/styles/core.css
@@ -1,8 +1,8 @@
-@import 'base';
+/*@import 'base';*/
 @import 'vendor/normalize';
 
-// Some best-practice CSS that's useful for most apps
-// Just remove them if they're not what you want
+/* Some best-practice CSS that's useful for most apps
+   Just remove them if they're not what you want */
 html {
   box-sizing: border-box;
 }
@@ -18,4 +18,8 @@ body {
 *:before,
 *:after {
   box-sizing: inherit;
+}
+
+.app {
+  /*color: red;*/
 }
